# cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  deny.toml  flake.nix  gemini-extension.json  lefthook.yml  package.json  pnpm-lock.yaml
.agent/skills/: vhs.md
.changeset/: fix-version-sync-workspace.md  frozen-lockfile-ci.md  remove-calendar-unwrap.md  sheets-append-range.md
.gemini/: config.yaml  style_guide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: automation.yml  ci.yml  cla.yml  coverage.yml  generate-skills.yml  policy.yml  publish-skills.yml  release-changesets.yml  release.yml  stale.yml
art/: features.txt  outro.txt  qr.txt  scene1.txt  scene2.txt  scene2b.txt  scene3.txt  scene3b.txt  scene4.txt  scene5.txt  scene6.txt  scene7.txt  scene8.txt  scene9.txt
crates/google-workspace/: Cargo.toml  README.md
crates/google-workspace-cli/: Cargo.toml  README.md
crates/google-workspace/src/: client.rs  discovery.rs  error.rs  lib.rs  services.rs  validate.rs
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  demo.tape  skills.md
npm/: .gitignore  install.js  package.json  platform.js  run.js
scripts/: version-sync.sh
skills/gws-admin-reports/: SKILL.md
skills/gws-calendar/: SKILL.md
skills/gws-calendar-agenda/: SKILL.md
skills/gws-calendar-insert/: SKILL.md
skills/gws-chat/: SKILL.md
skills/gws-chat-send/: SKILL.md
skills/gws-classroom/: SKILL.md
skills/gws-docs/: SKILL.md
skills/gws-docs-write/: SKILL.md
skills/gws-drive-upload/: SKILL.md
(+128 files in other folders)
